--- a/PersonalSprintPlanner/Views/BacklogPage.xaml
+++ b/PersonalSprintPlanner/Views/BacklogPage.xaml
@@ -19,7 +19,9 @@
                         </Grid.RowDefinitions>
 
                         <StackPanel Padding="12">
-                            <SymbolIcon x:Name="CloseDetails" Symbol="Cancel" HorizontalAlignment="Right" Tapped="CloseDetails_Tapped" />
+                            <Border x:Name="CloseDetails" HorizontalAlignment="Right" Tapped="CloseDetails_Tapped">
+                                <SymbolIcon Symbol="Cancel" />
+                            </Border>
 
                             <TextBlock Text="Details" FontSize="18" VerticalAlignment="Center" Style="{StaticResource DetailSubTitleStyle}" Margin="0,0,0,20"/>
                             <TextBox x:Name="Title"  Text="{x:Bind ViewModel.Selected.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="14" PlaceholderText="Title" TextWrapping="Wrap" MaxHeight="75" ScrollViewer.VerticalScrollBarVisibility="Auto" Header="Title"/>
